--- a/project/contact.html
+++ b/project/contact.html
@@ -17,7 +17,7 @@
     <title>Contact</title>
 </head>
 <body>
-   <nav class="navbar navbar-expand p-2 bg-danger text-white  position-sticky top-0 border border-secondary z-3">
+   <nav class="navbar navbar-expand p-2 bg-success text-white  position-sticky top-0 border border-secondary z-3">
       <ul class="navbar-nav">
         <li class="nav-item "></li>
         <li class="nav-item p-2"><img src="ChatGPT Image Aug 20, 2025, 10_56_32 PM.png" alt="" style='height: 70px; width:100px;'></li>
@@ -39,7 +39,10 @@
     </a>
       </div>
     </nav>
-      <img id='head-img' class="container-fluid" style ='height:300px' src="https://images.contentstack.io/v3/assets/bltcedd8dbd5891265b/bltcb5c5add9f186f0d/664cbc617f154494ea151f48/4832845-AdobeStock_216195684.jpeg?q=70&width=3840&auto=webp">
+    <div class='image-conatiner'>
+      <img id='head-img' class="container-fluid" style ='height:300px' src="https://images.contentstack.io/v3/assets/bltcedd8dbd5891265b/bltcb5c5add9f186f0d/664cbc617f154494ea151f48/4832845-AdobeStock_216195684.jpeg?q=70&width=3840&auto=webp" id='hdimg'>
+    <div class="text-overlay"><pre>   Contact   </pre></div>
+    </div>
       <hr>
       <div class='d-flex m-3 p-5 justify-content-between' id='contact'>
       <h3 class='text-danger'>Talk with our team</h3>
@@ -77,7 +80,7 @@
       </div>
     </div>
 
-       <div class="container-fluid mt-5 p-5 bg-danger text-center">
+       <div class="container-fluid mt-5 p-5 bg-dark text-white text-center">
     <div class='d-flex p-3 justify-content-around'>
         <div class='col'>
     <img src="ChatGPT Image Aug 20, 2025, 10_56_32 PM.png" alt="" style='height: 70px; width:100px;'> <br>
