--- a/project/home.html
+++ b/project/home.html
@@ -38,7 +38,7 @@
           GUIDE</a> </div>    
     </div>
     </div>
-    <div class="navbar navbar-expand p-2 bg-danger text-white  position-sticky top-0 border border-secondary z-3">
+    <div class="navbar navbar-expand p-2 bg-success text-white  position-sticky top-0 border border-secondary z-3">
       <ul class="navbar-nav">
         <li class="nav-item "></li>
         <li class="nav-item p-2"><img src="ChatGPT Image Aug 20, 2025, 10_56_32 PM.png" alt="" style='height: 70px; width:100px;'></li>
@@ -70,9 +70,9 @@
   </div>
 
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="https://www.tripsavvy.com/thmb/qFqPcg6Wo24Hu4fLokNfAZdC-xQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/fuji-mountain-in-autumn-822273028-5a6a8a9c3418c600363958d3.jpg" style="height: 500px; width:100%"></div>
-            <div class="carousel-item "><img src="https://wallpapercrafter.com/th8004/1234975-world-travel-travel-and-world-eiffel-la-tour.jpg" alt="" class="d-block w-100" style="height: 500px; object-fit: cover;"></div>
-            <div class="carousel-item "><img src="https://cdn.wallpapersafari.com/24/0/PJ05BG.jpg" alt="" class="d-block w-100" style="height: 500px; object-fit: cover;"></div>
+            <div class="carousel-item active"><img src="https://www.tripsavvy.com/thmb/qFqPcg6Wo24Hu4fLokNfAZdC-xQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/fuji-mountain-in-autumn-822273028-5a6a8a9c3418c600363958d3.jpg" style="height: 500px; width:100%" ></div>
+            <div class="carousel-item "><img src="https://wallpapercrafter.com/th8004/1234975-world-travel-travel-and-world-eiffel-la-tour.jpg" alt="" class="d-block w-100" style="height: 500px; object-fit: cover;" ></div>
+            <div class="carousel-item "><img src="https://cdn.wallpapersafari.com/24/0/PJ05BG.jpg" alt="" class="d-block w-100" style="height: 500px; object-fit: cover;" ></div>
         </div>
           <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-5 p-5 bg-danger text-center">
+    <div class="container-fluid mt-5 p-5 bg-dark text-white text-center">
     <div class='d-flex p-3 justify-content-around'>
         <div class='col'>
     <img src="ChatGPT Image Aug 20, 2025, 10_56_32 PM.png" alt="" style='height: 70px; width:100px;'> <br>
